<resources>
    <string name="app_name">HydroMy</string>
    <string name="report">Report</string>
    <string name="do_you_know">Do you know..</string>
    <string name="title_activity_user_pages_with_bottom_menu">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="WQI_desc">Your water quality is measured based on WQI from <b>0 - 100</b>. \n\n
        <b>0.00 - 30.9 :</b> \n
        Heavily Polluted, cannot be used in any aspects. \n\n

        <b>31.0 - 51.8 :</b> \n
        Polluted, can only be used in irrigation\n\n

        <b>51.9 – 76.4 :</b> \n
        Neutral, can be used in livestock drinking\n\n

        <b>76.5 – 92.6 :</b> \n
        Clean, suitable for recreational use body contact\n\n

        <b>92.7 - 100 :</b> \n
        Very Clean, safe and drinkable water \n\n</string>
    <string name="view_more"><u>View More ..</u></string>
    <string name="hide"><u>Hide</u></string>
    <string name="discard_report_title">Discard your report?</string>
    <string name="discard_report_desc">The existing photos and description will be discarded.</string>
    <string name="delete_photo_title">Delete this photo?</string>
    <string name="empty_string" />
    <string name="WQIStatusHeavilyPolluted">- Heavily Polluted -</string>
    <string name="WQIStatusPolluted">- Polluted -</string>
    <string name="WQIStatusNeutral">- Neutral -</string>
    <string name="WQIStatusClean">- Clean -</string>
    <string name="WQIStatusVeryClean">- Very Clean -</string>

    <string name="DO_desc">Dissolved oxygen (DO) is considered as one of the most crucial parameters in monitoring water quality as it represents the amount of oxygen contained in the water and health of the water.
        as well as a direct indicator of an aquatic resource’s ability to support aquatic life.\n\n

        Subindex of DO = 100.0, if DO >= 92.0)\n
        Subindex of DO = -0.395 + 0.030(DO^2) - 0.00020(DO^3), if 8 &lt; DO &lt; 92\n
        Subindex of DO = 0, if DO &lt;= 8\n
    </string>
    <string name="BOD_desc">Biochemical oxygen demand (BOD) is another important parameter, it is an indicator of organic pollution in the water which correlated to the requirement of dissolved oxygen (DO).
        High BOD values might lead to reduction of oxygen availability to oxygen-demanding species, degrade aquatic environment and habitats.
    </string>
    <string name="COD_desc">Chemical oxygen demand (COD) is a measurement of the oxygen demand for organic substances or pollutants which are difficult to be oxidized.</string>
    <string name="NH3N_desc">Ammonia (NH3-N / NH3+) is a colorless gas with a strong pungent odor.NH3 is the principal form of toxic ammonia. It has been reported toxic to fresh water organisms at concentrations ranging from 0.53 to 22.8 mg/L.
        When ammonia is present in water at high enough levels, it is difficult for aquatic organisms to sufficiently excrete the toxicant, leading to toxic buildup in internal tissues and blood, and potentially death.
        Environmental factors, such as pH and temperature, can affect ammonia toxicity to aquatic animals.
    </string>
    <string name="SS_desc">Suspended solids (SS) refers to small solid particles which remain in suspension in water as a colloid or due to motion of the water.
        Suspended solids can be removed by sedimentation because of their comparatively large size.
        It is used as one indicator of water quality, if the value of SS is greater, it represents that the water quality is poorer.
    </string>
    <string name="pH_desc">pH value of water is a very important measurement concerning water quality. pH is a measure of how acidic/basic water is.
        The range goes from 0 to 14, with 7 being neutral. pHs of less than 7 indicate acidity, whereas a pH of greater than 7 indicates a base.
        pH is really a measure of the relative amount of free hydrogen and hydroxyl ions in the water. Water that has more free hydrogen ions is acidic, whereas water that has more free hydroxyl ions is basic.
        Since pH can be affected by chemicals in the water, pH is an important indicator of water that is changing chemically. pH is reported in "logarithmic units".
        Each number represents a 10-fold change in the acidity/basicness of the water. Water with a pH of five is ten times more acidic than water having a pH of six.
    </string>
    <string name="WQI_desc_detail">Your water quality is measured based on WQI from <b>0 - 100</b>. \n\n
        <b>0.00 - 30.9 :</b> \n
        Heavily Polluted, cannot be used in any aspects. \n\n

        <b>31.0 - 51.8 :</b> \n
        Polluted, can only be used in irrigation\n\n

        <b>51.9 – 76.4 :</b> \n
        Neutral, can be used in livestock drinking\n\n

        <b>76.5 – 92.6 :</b> \n
        Clean, suitable for recreational use body contact\n\n

        <b>92.7 - 100 :</b> \n
        Very Clean, safe and drinkable water \n\n

        It is for measuring water quality by applying some water quality measurements as parameters. The calculation as below: \n\n

        WQI = \n
        (0.22 x SubIndex of DO)\n
        + (0.19 x SubIndex of BOD) \n
        + (0.16 x SubIndex of COD) \n
        + (0.15 x SubIndex of NH3-N) \n
        + (0.16 x SubIndex of SS) \n
        + (0.12 x SubIndex of pH value);
    </string>
    <string name="required">Required</string>
    <string name="login_to_regis_text"><u>Don\'t have an account? Register now!</u></string>
    <string name="ubidotsAccSetupStep1">Please register or login your Ubidots account \n\n

        Click the link below for: \n
        1. \tRegistration: <a href="https://industrial.ubidots.com/accounts/signup_industrial/">https://industrial.ubidots.com/accounts/signup_industrial/</a> \n
        2. \tLogin: <a href="https://industrial.ubidots.com/accounts/signin/">https://industrial.ubidots.com/accounts/signin/</a>
    </string>
    <string name="loading_searching_text">Please wait for a while..\n
        We are linking your Ubidots account\n\n Please don\'t exit and refresh this page</string>
    <string name="call_to_setup">Oops!\nYou haven\'t set up your Ubidots account</string>
    <string name="organization_s_participated_in_hydromy">Organization(s) participated in HydroMy!</string>
    <string name="discard_org">Are you sure to discard the newly added organization?</string>
    <string name="discard_org_desc">The organization must be created with an admin, by leaving this page, organization created just now will be removed.</string>
    <string name="assigned_organization">Assigned \nOrganization :</string>
    <string name="estimated_cleaning_duration">Estimated \nCleaning \nDuration : </string>
    <string name="delete_selected_report">Delete selected report(s)?</string>
    <string name="delete_user_title">Delete user ?</string>
    <string name="delete_news_title">Delete this news?</string>
    <string name="delete_em_title">Delete employee ?</string>
    <string name="alert_delete_only_one">Still Proceed with Deletion?</string>
    <string name="delete_org_title">Delete Organization?</string>

    <string-array name="state_array">
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Malacca</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
    </string-array>

    <string-array name="filter_examination">
        <item>All</item>
        <item>Validity of Report</item>
        <item>1st Investigation</item>
        <item>2nd Investigation &amp; Report on Cleaning Process</item>
    </string-array>

    <string-array name="filter_user">
        <item>All</item>
        <item>Home User</item>
        <item>System Admin</item>
    </string-array>

    <string-array name="filter_employee">
        <item>All</item>
        <item>Organization Admin</item>
        <item>Examiner</item>
        <item>Investigator</item>
        <item>Independent Examiner</item>
    </string-array>

</resources>