<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.water_quality_monitring_and_reporting_app_with_ai_chatbot.ui.userhome.UserHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_user_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.water_quality_monitring_and_reporting_app_with_ai_chatbot.ui.userreport.UserReportFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_user_report" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.water_quality_monitring_and_reporting_app_with_ai_chatbot.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>