<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conCardNumRegis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/login_img_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_user_icon" />

            <TextView
                android:id="@+id/txt_login_loginTitle"
                android:fontFamily="@font/nunito_sans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="30dp"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_img_avatar" />

            <EditText
                android:id="@+id/login_eTxt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/nunito_sans"
                android:hint="Email"
                android:paddingLeft="20dp"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_login_loginTitle" />

            <TextView
                android:id="@+id/login_txt_errorMsgEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:gravity="right"
                android:text="@string/required"
                android:textColor="#db4442"
                app:layout_constraintTop_toBottomOf="@+id/login_eTxt_email"
                tools:layout_editor_absoluteX="20dp" />

            <EditText
                android:id="@+id/login_eTxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_txt_errorMsgEmail" />

            <TextView
                android:id="@+id/login_txt_errorMsgPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:gravity="right"
                android:text="@string/required"
                android:textColor="#db4442"
                app:layout_constraintTop_toBottomOf="@+id/login_eTxt_password"
                tools:layout_editor_absoluteX="20dp" />

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/nunito_sans"
                android:text="Login"
                android:onClick="login"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_txt_errorMsgPassword" />

            <TextView
                android:id="@+id/login_txt_loginToRegis"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center"
                android:text="@string/login_to_regis_text"
                android:textAllCaps="false"
                android:textColor="#009688"
                android:textSize="15dp"
                android:onClick="toUserRegister"
                app:backgroundTint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>